# ImageView_QML

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ExifReader.cpp  ExifReader.h  FileDeleter.cpp  FileDeleter.h  ImageItem.cpp  ImageItem.h  ImageItemModel.cpp  ImageItemModel.h  ImageReader.cpp  ImageReader.h  JpegReader.cpp  JpegReader.h  Main.qml  README.md  Utils.cpp  Utils.h  main.cpp
